<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_logo"
            android:title="@string/menu_home"
            app:actionLayout="@layout/nav_item_layout" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery"
            app:actionLayout="@layout/nav_item_layout" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/help"
            android:title="@string/menu_slideshow"
            app:actionLayout="@layout/nav_item_layout" />

    </group>
</menu>