<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:importantForAccessibility="yes"
    android:contentDescription="@string/app_name"
    tools:openDrawer="start">

    <!-- Main content: ConstraintLayout with TextView -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="760dp"
            android:ems="10"
            android:text="@string/email_address"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:contentDescription="@string/navigation_drawer_description"
            android:fitsSystemWindows="true"
            android:importantForAccessibility="yes"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/activity_main_drawer"
            tools:layout_editor_absoluteX="-10dp"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation Drawer -->

</androidx.drawerlayout.widget.DrawerLayout>